# Linux

./: README.md
Socket_Demo/: client.c  server
cpu/: Android.mk  MakeFile  cputest  cputest.c
dhrystone/: CMakeLists.txt  cross_complie.sh  dhry_1.c  exec_bind_core.sh  make.sh  nohup.out
dhrystone/build_arm/: CMakeCache.txt  Makefile  cmake_install.cmake  dhrystone
dhrystone/build_x86/: CMakeCache.txt  Makefile  cmake_install.cmake  dhrystone
file/: Makefile  main.c  main.cpp
fork_process/: Android.mk
fork_process/src/: main.cpp
getmem/: Android.bp  getmem.cpp
gpubusypercent/: Android.mk  get_gpubusypercent.cpp
io/: Android.mk  io.c
io/file_write/: Android.bp  io_test.cpp
io/iotest/: Android.mk  io_test.cpp
memory/memtester/: Android.mk  memtester.c
memory/memtester-2/: Android.mk  MakeFile  memtester  memtester.c
memtester/: tests.c
net/Socket_Demo/: client
net/broadcast-demo/: broadcast_client  broadcast_client.c  broadcast_server  broadcast_server.c
net/socketSendfile/: client  client.cpp  server  server.cpp
net/splice_sample/splice_sample/from_file/to_file/: to_file.c
net/splice_sample/splice_sample/from_file/to_file_fd/: file_fd_recv.c  to_file_fd.c
net/splice_sample/splice_sample/from_socket/: send.c  socket_recv.c  splice_trans.c
sysstat-10.2.0/: Android.mk  Makefile.in  rndr_stats.c  sa2.in  sa_common.c  sar.c  sysstat.sysconfig.in
sysstat-10.2.0/contrib/isag/: isag.in
sysstat-10.2.0/man/: sa1.in  sa2.in
sysstat-android-master/: Android.mk  iostat.c  mpstat.c  pidstat.c  sa_common.c  sar.c
(+2 files in other folders)
